[package]
name = "snesgfxconv"
version = "0.1.3"
authors = ["hal <forarslys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
png = "0.16.1"
bincode = "1.3.1"
sneslib = { git = "https://github.com/forarslys/sneslib.git", branch="main" }
